set(PROJECT_NAME FileZilla)

################################################################################
# Source groups
################################################################################
set(Headers
    "aboutdialog.h"
    "asksavepassworddialog.h"
    "asyncrequestqueue.h"
    "aui_notebook_ex.h"
    "auto_ascii_files.h"
    "bookmarks_dialog.h"
    "buildinfo.h"
    "chmoddialog.h"
    "clearprivatedata.h"
    "cmdline.h"
    "commandqueue.h"
    "conditionaldialog.h"
    "context_control.h"
    "customheightlistctrl.h"
    "defaultfileexistsdlg.h"
    "dialogex.h"
    "dndobjects.h"
    "dragdropmanager.h"
    "drop_target_ex.h"
    "edithandler.h"
    "encoding_converter.h"
    "export.h"
    "file_utils.h"
    "fileexistsdlg.h"
    "filelist_statusbar.h"
    "filelistctrl.h"
    "filezillaapp.h"
    "filter_conditions_dialog.h"
    "filter_manager.h"
    "filteredit.h"
    "fzputtygen_interface.h"
    "graphics.h"
    "import.h"
    "infotext.h"
    "inputdialog.h"
    "led.h"
    "list_search_panel.h"
    "listctrlex.h"
    "listingcomparison.h"
    "local_recursive_operation.h"
    "locale_initializer.h"
    "LocalListView.h"
    "LocalTreeView.h"
    "loginmanager.h"
    "Mainfrm.h"
    "manual_transfer.h"
    "menu_bar.h"
    "msgbox.h"
    "netconfwizard.h"
    "option_change_event_handler.h"
    "Options.h"
    "overlay.h"
    "power_management.h"
    "queue.h"
    "queue_storage.h"
    "QueueView.h"
    "queueview_failed.h"
    "queueview_successful.h"
    "quickconnectbar.h"
    "recentserverlist.h"
    "recursive_operation_status.h"
    "remote_recursive_operation.h"
    "RemoteListView.h"
    "RemoteTreeView.h"
    "search.h"
    "serverdata.h"
    "settings/optionspage.h"
    "settings/optionspage_connection.h"
    "settings/optionspage_connection_active.h"
    "settings/optionspage_connection_ftp.h"
    "settings/optionspage_connection_passive.h"
    "settings/optionspage_connection_sftp.h"
    "settings/optionspage_dateformatting.h"
    "settings/optionspage_debug.h"
    "settings/optionspage_edit.h"
    "settings/optionspage_edit_associations.h"
    "settings/optionspage_fileexists.h"
    "settings/optionspage_filelists.h"
    "settings/optionspage_filetype.h"
    "settings/optionspage_ftpproxy.h"
    "settings/optionspage_interface.h"
    "settings/optionspage_language.h"
    "settings/optionspage_logging.h"
    "settings/optionspage_passwords.h"
    "settings/optionspage_proxy.h"
    "settings/optionspage_sizeformatting.h"
    "settings/optionspage_themes.h"
    "settings/optionspage_transfer.h"
    "settings/optionspage_updatecheck.h"
    "settings/settingsdialog.h"
    "sftp_crypt_info_dlg.h"
    "sitemanager.h"
    "sitemanager_controls.h"
    "sitemanager_dialog.h"
    "sitemanager_site.h"
    "sizeformatting.h"
    "speedlimits_dialog.h"
    "splitter.h"
    "state.h"
    "statusbar.h"
    "statuslinectrl.h"
    "StatusView.h"
    "storj_key_interface.h"
    "systemimagelist.h"
    "textctrlex.h"
    "themeprovider.h"
    "timeformatting.h"
    "toolbar.h"
    "treectrlex.h"
    "update_dialog.h"
    "verifycertdialog.h"
    "verifyhostkeydialog.h"
    "view.h"
    "viewheader.h"
    "volume_enumerator.h"
    "welcome_dialog.h"
    "window_state_manager.h"
    "wrapengine.h"
    "wxext/spinctrlex.h"
    "wxfilesystem_blob_handler.h"
    "xh_text_ex.h"
    "xmlfunctions.h"
    "xrc_helper.h"
)


add_executable(wxFileMan WIN32

        "aboutdialog.cpp"
        "asksavepassworddialog.cpp"
        "asyncrequestqueue.cpp"
        "aui_notebook_ex.cpp"
        #auto_ascii_files.cpp
        "bookmarks_dialog.cpp"
        "buildinfo.cpp"
        "chmoddialog.cpp"
        "clearprivatedata.cpp"
        "cmdline.cpp"
        "commandqueue.cpp"
        "conditionaldialog.cpp"
        "context_control.cpp"
        "customheightlistctrl.cpp"
        "defaultfileexistsdlg.cpp"
        "dialogex.cpp"
        "dndobjects.cpp"
        "dragdropmanager.cpp"
        "drop_target_ex.cpp"
        "edithandler.cpp"
        "encoding_converter.cpp"
        "export.cpp"
        "file_utils.cpp"
        "fileexistsdlg.cpp"
        "filelist_statusbar.cpp"
        "filelistctrl.cpp"
        "FileZilla.cpp"
        "filter_conditions_dialog.cpp"
        "filter_manager.cpp"
        "filteredit.cpp"
        "fzputtygen_interface.cpp"
        "graphics.cpp"
        "import.cpp"
        "infotext.cpp"
        "inputdialog.cpp"
        "led.cpp"
        "list_search_panel.cpp"
        "listctrlex.cpp"
        "listingcomparison.cpp"
        "local_recursive_operation.cpp"
        "locale_initializer.cpp"
        "LocalListView.cpp"
        "LocalTreeView.cpp"
        "loginmanager.cpp"
        Mainfrm.cpp
        "manual_transfer.cpp"
        "menu_bar.cpp"
        "msgbox.cpp"
        "netconfwizard.cpp"
        "option_change_event_handler.cpp"
        "Options.cpp"
        "overlay.cpp"
        "power_management.cpp"
        "queue.cpp"
        "queue_storage.cpp"
        "QueueView.cpp"
        "queueview_failed.cpp"
        "queueview_successful.cpp"
        "quickconnectbar.cpp"
        "recentserverlist.cpp"
        "recursive_operation_status.cpp"
        "remote_recursive_operation.cpp"
        "RemoteListView.cpp"
        "RemoteTreeView.cpp"
        #search.cpp
        serverdata.cpp
        "settings/optionspage.cpp"
        "settings/optionspage_connection.cpp"
        "settings/optionspage_connection_active.cpp"
        "settings/optionspage_connection_ftp.cpp"
        "settings/optionspage_connection_passive.cpp"
        "settings/optionspage_connection_sftp.cpp"
        "settings/optionspage_dateformatting.cpp"
        "settings/optionspage_debug.cpp"
        "settings/optionspage_edit.cpp"
        "settings/optionspage_edit_associations.cpp"
        "settings/optionspage_fileexists.cpp"
        "settings/optionspage_filelists.cpp"
        "settings/optionspage_filetype.cpp"
        "settings/optionspage_ftpproxy.cpp"
        "settings/optionspage_interface.cpp"
        "settings/optionspage_language.cpp"
        "settings/optionspage_logging.cpp"
        "settings/optionspage_passwords.cpp"
        "settings/optionspage_proxy.cpp"
        "settings/optionspage_sizeformatting.cpp"
        "settings/optionspage_themes.cpp"
        "settings/optionspage_transfer.cpp"
        "settings/optionspage_updatecheck.cpp"
        "settings/settingsdialog.cpp"
        "sftp_crypt_info_dlg.cpp"
        "sitemanager.cpp"
        "sitemanager_controls.cpp"
        "sitemanager_dialog.cpp"
        "sitemanager_site.cpp"
        "sizeformatting.cpp"
        "speedlimits_dialog.cpp"
        splitter.cpp
        state.cpp
        "statusbar.cpp"
        "statuslinectrl.cpp"
        "StatusView.cpp"
        "storj_key_interface.cpp"
        "systemimagelist.cpp"
        "textctrlex.cpp"
        "themeprovider.cpp"
        "timeformatting.cpp"
        "toolbar.cpp"
        "treectrlex.cpp"
        "update_dialog.cpp"
        "verifycertdialog.cpp"
        "verifyhostkeydialog.cpp"
        "view.cpp"
        viewheader.cpp
        volume_enumerator.cpp
        welcome_dialog.cpp
        window_state_manager.cpp
        wrapengine.cpp
        wxext/spinctrlex.cpp
        wxfilesystem_blob_handler.cpp
        xh_text_ex.cpp
        xmlfunctions.cpp
        xrc_helper.cpp
        dropsource.cpp
        renderer.cpp
)

#

target_include_directories(wxFileMan PRIVATE
    ${PROJECT_SOURCE_DIR}/src/include
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/vendor/libfilezilla/lib
)

if(MSVC)

endif()

add_dependencies(wxFileMan commonui engine fz)

target_compile_definitions(wxFileMan PRIVATE PACKAGE_VERSION=\"${PACKAGE_VERSION}\")

target_link_libraries(wxFileMan PRIVATE

    fz commonui engine pugixml wx gnutls nettle hogweed normaliz wsock32 odbc32
    uxtheme oleacc ComCtl32 wxexpat wxpng wxzlib
    odbccp32 comctl32 Netapi32 Winmm Ws2_32 mpr sqlite3 powrprof Shlwapi
        engine_storj engine_sftp engine_ftp

)

